Bug 39478 - Writer / Calc: Drawing toolbar buttons do not show as depressed
Summary: Writer / Calc: Drawing toolbar buttons do not show as depressed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium major
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-22 09:07 UTC by Stefan Knorr
Modified: 2016-10-25 19:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of actual and expected look (17.09 KB, image/png)
2011-07-22 09:07 UTC, Stefan Knorr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Knorr 2011-07-22 09:07:11 UTC
Created attachment 49431 [details]
Screenshot of actual and expected look

In Writer and Calc, the drawing tool buttons in the Drawing toolbar don't show as depressed when they are activated.
This behaviour means that user can only see from the mouse pointer that a drawing tool is activated and can only guess which one it is until they draw.

To reproduce:
* Enable Drawing toolbar via View > Toolbars > Drawing
* Click an item of a shape
* Move mouse and see that the button isn't depressed
Comment 1 Rainer Bielefeld Retired 2011-07-23 02:36:31 UTC
[Reproducible] with "LibreOffice 3.4.1 RC2 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:202)]" 

In DRAW (correct):
When clicked 
  Shape icon becomes marked and mouse pointer icon becomes unmarked 
  until icon has been painted. 
    When Drawing element has been finished, then Shape icon becomes unmarked 
    and mouse pointer icon becomes marked again

In WRITER:
When clicked 
  Shape icon becomes marked and mouse pointer icon becomes unmarked (if it
  was marked because a drawing element was selected)
  As soon as left mouse button becomes released, it becomes unmarked
    When Drawing element has been finished, then Shape icon REMAINS unmarked 
    Mouse pointer icon does not become marked, although drawing element is 
    selected. 
      You have th click into the document and then on the drawing element 
      again to get the mouse pointer icon marked again.

All drawing element Icons (Line, Textbox included) are affected.

Heritage from OOo  

@Aaron Strontsman:
Your OS is?
Comment 2 Stefan Knorr 2011-07-23 02:52:49 UTC
... Ubuntu x86-64. So, I think we can leave the platform pickers set to "All".
Comment 3 Rainer Bielefeld Retired 2011-07-23 03:48:46 UTC
Modified Version due to OOo heritage and observation in LibO 3.3.0 Portable

@Aaron:
It's a widespread superstition that age-old minor bugs will be fixed more quickly if a disproportionate high Importance level has been selected in Bugzilla.
Comment 4 Björn Michaelsen 2011-12-23 13:24:37 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 5 A (Andy) 2014-10-02 09:23:00 UTC
reproducible with LO 4.3.2.2 (Win 8.1)

I would also expect that it will stay selected, but maybe (I don't know) some others will like the current behaviour.
Comment 6 Commit Notification 2015-07-13 17:43:12 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=107a4740f63860f0901f51217b16cefa62a827ac

tdf#39478 Fix custom shapes status update

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.