tdf#39478 Fix custom shapes status update

In sw it was still returning a string item, although the
slot type was changed to boolean back in 2005 with
4cce2a2f08238e1e03055877aa89bc755ec06f59.

In sc the status update was simply missing.

Change-Id: I8a6dd157d1e401754b3a9a93dc83458dcdd4f089